@@ -1,11 +1,17 @@
 package tn.comping.spring.backendcomping.services.serviceImpl;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import tn.comping.spring.backendcomping.config.JwtUtils;
+import tn.comping.spring.backendcomping.config.SecurityUtils;
 import tn.comping.spring.backendcomping.dto.EventRequestDTO;
 import tn.comping.spring.backendcomping.dto.EventResponseDTO;
 import tn.comping.spring.backendcomping.entities.Event;
+import tn.comping.spring.backendcomping.repositories.ActivityRepository;
 import tn.comping.spring.backendcomping.repositories.EventRepository;
+import tn.comping.spring.backendcomping.utils.mapper.ActivityMapper;
 import tn.comping.spring.backendcomping.utils.mapper.EventMapper;
 
 import java.util.List;
@@ -13,11 +19,17 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class EventServiceImpl implements  EventService{
     private final EventRepository eventRepository;
+    private final ActivityRepository activityRepository;
+    private final SecurityUtils securityUtils;
+    private  final CarteFideliteService carteFideliteService;
     @Override
     public EventResponseDTO createEvent(EventRequestDTO dto) {
+        String userId = securityUtils.getCurrentUserId();
         Event event = EventMapper.toEntity(dto);
+        event.setOrganisateurId(userId);
         return EventMapper.toDto(eventRepository.save(event));
     }
 
@@ -32,8 +44,20 @@ public class EventServiceImpl implements  EventService{
     public List<EventResponseDTO> getAllEvents() {
         return eventRepository.findAll()
                 .stream()
-                .map(EventMapper::toDto)
-                .collect(Collectors.toList());
+                .map(event -> {
+
+                    EventResponseDTO dto = EventMapper.toDto(event);
+
+                    dto.setActivities(
+                            activityRepository.findAllById(event.getActivityIds())
+                                    .stream()
+                                    .map(ActivityMapper::toResponse)
+                                    .toList()
+                    );
+
+                    return dto;
+                })
+                .toList();
     }
 
     @Override
@@ -47,6 +71,14 @@ public class EventServiceImpl implements  EventService{
         if (dto.getStatut() != null) {
             existing.setStatut(dto.getStatut());
         }
+        existing.setNiveauDifficulte(dto.getNiveauDifficulte());
+        existing.setTrancheAge(dto.getTrancheAge());
+        existing.setLatitude(dto.getLatitude());
+        existing.setLongitude(dto.getLongitude());
+        existing.setSaison(dto.getSaison());
+        existing.setDureeEnHeures(dto.getDureeEnHeures());
+        existing.setTags(dto.getTags());
+        existing.setActivityIds(dto.getActivityIds());
         return EventMapper.toDto(eventRepository.save(existing));
     }
 
@@ -57,5 +89,55 @@ public class EventServiceImpl implements  EventService{
             }
             eventRepository.deleteById(id);
 
+    }
+
+    @Override
+    public long countByStatut(String statut) {
+        return eventRepository.countByStatut(statut);
+    }
+
+    @Override
+    public EventResponseDTO participate(String eventId) {
+        // 1. Récupérer user connecté
+        String userId = SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getName();
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new RuntimeException("Event introuvable"));
+
+        if (event.getParticipantIds() == null) {
+            event.setParticipantIds(new java.util.ArrayList<>());
+        }
+        if (event.getParticipantIds().size() >= event.getCapacite()) {
+            throw new RuntimeException("Event complet");
+        }
+
+        if (event.getParticipantIds().contains(userId)) {
+            throw new RuntimeException("Déjà inscrit à cet event");
+        }
+
+
+
+        event.getParticipantIds().add(userId);
+
+        Event saved = eventRepository.save(event);
+
+        return EventMapper.toDto(saved);
+    }
+
+    @Override
+    public EventResponseDTO cancelParticipation(String eventId) {
+        String userId = SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getName();
+
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new RuntimeException("Event introuvable"));
+
+        if (event.getParticipantIds() != null) {
+            event.getParticipantIds().remove(userId);
+        }
+
+        return EventMapper.toDto(eventRepository.save(event));
     }
 }
